--- a/index.html
+++ b/index.html
@@ -132,9 +132,11 @@
         <div class="card"><h3>ISACA Certificates</h3><p>CISA, CISM</p></div>
         <div class="card"><h3>USGBC Certificates</h3><p>LEED GA, LEED AP</p></div>
         <div class="card"><h3>GAQM Certificates</h3><p>CFM, CPFA</p></div>
-        <div class="card"><h3>ISO Certifications</h3></div>
+        <div class="card"><h3>ISO Certifications</h3><p>ISO 9001 Certified Lead Auditor & ISO 27001 ISMS</p></div>
         <div class="card"><h3>Microsoft Certificates</h3><p>AZ-900, AZ-104, AZ-305</p></div>
         <div class="card"><h3>Google Certificates</h3><p>IT Support, Data Analytics, UX Design</p></div>
+         <div class="card"><h3>Six Sigma Certification </h3><p>Six sigma yellow belt & Six sigma green belt</p></div>
+        
       </div>
     </div>
   </section>
@@ -160,7 +162,7 @@
       <div class="contact-cards">
         <div class="contact-card">
           <h3><i class="fas fa-phone"></i> Call Us</h3>
-          <p>+1-234-567-890</p>
+          <p>+91 8979856407</p>
         </div>
         <div class="contact-card">
           <h3><i class="fas fa-envelope"></i> Email Us</h3>
@@ -168,7 +170,7 @@
         </div>
         <div class="contact-card">
           <h3><i class="fab fa-instagram"></i> Follow Us</h3>
-          <p><a href="https://instagram.com/eduviaa" target="_blank">@eduviaa</a></p>
+          <p><a href="https://www.instagram.com/eduvi.aa?igsh=ajBrcWwycGVnYnc=" target="_blank">@eduviaa</a></p>
         </div>
       </div>
     </div>
